refactoring of text bundle processing